--- a/.gitignore
+++ b/.gitignore
@@ -32,11 +32,10 @@
 
 # ignore everything in the root except the "wp-content" directory.
 /*
-!wp-content/
-
-/*
+!wp-content
 !oop-sample
 /
+
 
 # ignore all files starting with .
 .*
